Adjustet popup sizes, fixed bug where the verify and encrypt inline dialogs weren't visible

--- a/common/ui/inline/dialogs/signDialog.css
+++ b/common/ui/inline/dialogs/signDialog.css
@@ -20,9 +20,9 @@ html, body {
   display: none;
   /*background-color: rgba(254,251,243,.7);*/
   position: absolute;
-  top: 50%;
+  top: 135px;
   left: 50%;
-  padding: 20px 20px 0 40px;
+  padding: 20px 40px 0 40px;
   margin-left: -250px;
   width: 500px;
 }
